<resources>
    <string name="app_name">EntryTrack</string>
    <string name="building_info_header">Number of People in %1$s</string>
    <string name="last_updated_time">Last updated %1$d %2$s ago</string>
    <string name="last_updated_now">Last updated &lt; 1 minute ago</string>
    <string name="people_amount">%1$d</string>
    <string name="select_a_property">Select a property</string>
    <string name="select_a_building">Select a building</string>
    <string name="temp_button_text">Pace University (temp)</string>
    <string name="button_show_history">Show History</string>
    <string name="button_display_graph">Display Graph</string>
    <string name="text_notify">Notify me when occupancy reaches</string>
    <string name="history_searchText_initial">search</string>
    <string name="button_filter_text">Filter</string>
    <string name="history_title">%1$s History</string>
    <string name="graph_title">%1$s Graph</string>
    <string name="graph_enter_date_text">Enter Date</string>
    <string name="graph_from_text">From</string>
    <string name="graph_to_text">to</string>
    <string name="graph_create_graph_text">Create Graph</string>
    <string name="graph_flip_text">Flip to Landscape</string>
    <string name="force_refresh_text">Force Refresh</string>
    <string name="amount_zero">0</string>
    <string name="no_properties">No properties are available :(</string>
    <string name="no_buildings">%1$s does not have any buildings :(</string>
    <string name="history_average">Average in last 24 hours: \n %1$d</string>
    <string name="history_interval_text">Show every</string>
    <string name="capacity_text">Occupancy is %1$s</string>
</resources>
